# simple_tcp_rpc

./: .gitignore  Makefile  demo_client  demo_client.cpp  demo_server  demo_server.cpp  meson.build  setup.sh  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
tcp_rpc/: client.hpp  common.hpp  server.hpp  tcp_rpc.hpp
